# storage/api-docs/api-docs.json
@@ -2802,6 +2802,141 @@
                 }
             }
         },
+        "/profile/{id}": {
+            "put": {
+                "tags": [
+                    "Restaurant Profile"
+                ],
+                "summary": "Update User Profile",
+                "description": "Update the details of a user profile by ID.",
+                "operationId": "dec75c98df53e810bb7dc3d89977a1e9",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User profile ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 4
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "restaurantId",
+                                    "email"
+                                ],
+                                "properties": {
+                                    "firstName": {
+                                        "type": "string",
+                                        "example": "John"
+                                    },
+                                    "lastName": {
+                                        "type": "string",
+                                        "example": "Doe"
+                                    },
+                                    "gender": {
+                                        "type": "string",
+                                        "example": "Male"
+                                    },
+                                    "restName": {
+                                        "type": "string",
+                                        "example": "Doe's Restaurant"
+                                    },
+                                    "phoneNumber": {
+                                        "type": "string",
+                                        "example": "1234567890"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "example": "123 Main St"
+                                    },
+                                    "pinCode": {
+                                        "type": "string",
+                                        "example": "123456"
+                                    },
+                                    "restaurantId": {
+                                        "type": "string",
+                                        "example": "R1728231298"
+                                    },
+                                    "identity": {
+                                        "type": "string",
+                                        "example": "Passport"
+                                    },
+                                    "identityNumber": {
+                                        "type": "string",
+                                        "example": "P123456789"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "johndoe@example.com"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Profile updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Profile updated successfully"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Profile"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Profile not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Profile not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Failed to update profile"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "tags": [
@@ -4319,6 +4454,84 @@
                     }
                 },
                 "type": "object"
+            },
+            "Profile": {
+                "required": [
+                    "restaurantId",
+                    "email"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "User profile ID",
+                        "type": "integer",
+                        "example": 4
+                    },
+                    "firstName": {
+                        "description": "User's first name",
+                        "type": "string",
+                        "example": "John",
+                        "nullable": true
+                    },
+                    "lastName": {
+                        "description": "User's last name",
+                        "type": "string",
+                        "example": "Doe",
+                        "nullable": true
+                    },
+                    "gender": {
+                        "description": "Gender of the user",
+                        "type": "string",
+                        "example": "Male",
+                        "nullable": true
+                    },
+                    "restName": {
+                        "description": "Restaurant name",
+                        "type": "string",
+                        "example": "Doe's Restaurant",
+                        "nullable": true
+                    },
+                    "phoneNumber": {
+                        "description": "User's phone number",
+                        "type": "string",
+                        "example": "1234567890",
+                        "nullable": true
+                    },
+                    "address": {
+                        "description": "User's address",
+                        "type": "string",
+                        "example": "123 Main St",
+                        "nullable": true
+                    },
+                    "pinCode": {
+                        "description": "User's pin code",
+                        "type": "string",
+                        "example": "123456",
+                        "nullable": true
+                    },
+                    "restaurantId": {
+                        "description": "Restaurant identifier",
+                        "type": "string",
+                        "example": "R1728231298"
+                    },
+                    "identity": {
+                        "description": "Identity type",
+                        "type": "string",
+                        "example": "Passport",
+                        "nullable": true
+                    },
+                    "identityNumber": {
+                        "description": "Identity number",
+                        "type": "string",
+                        "example": "P123456789",
+                        "nullable": true
+                    },
+                    "email": {
+                        "description": "User's email address",
+                        "type": "string",
+                        "example": "johndoe@example.com"
+                    }
+                },
+                "type": "object"
             }
         },
         "securitySchemes": {
@@ -4338,10 +4551,6 @@
         }
     ],
     "tags": [
-        {
-            "name": "Restaurant Profile",
-            "description": "Operations related to user profiles"
-        },
         {
             "name": "Category",
             "description": "Category"
@@ -4381,6 +4590,10 @@
         {
             "name": "Transaction",
             "description": "Transaction"
+        },
+        {
+            "name": "Restaurant Profile",
+            "description": "Restaurant Profile"
         },
         {
             "name": "Authentication",
